# PrismaUI

./: .gitignore  BuildRelease.ps1  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json  xmake.lua
cmake/: CompilerFlags.cmake  ExternalDependencies.cmake  commonlibsse.cmake
lib/ultralight/include/Ultralight/: Bitmap.h  Defines.h  View.h
lib/ultralight/include/Ultralight/CAPI/: CAPI_View.h
lib/ultralight/include/Ultralight/platform/: GPUDriver.h
lib/ultralight/inspector/: Main.html  Test.html  TestStub.html  localizedStrings.js
lib/ultralight/inspector/Base/: BrowserInspectorFrontendHost.js  DOMUtilities.js  FileUtilities.js  IDLExtensions.js  Main.js  Setting.js  URLUtilities.js  Utilities.js
lib/ultralight/inspector/Controllers/: AnimationManager.js  ApplicationCacheManager.js  CSSManager.js  CanvasManager.js  CodeMirrorCompletionController.js  CodeMirrorSpringEditingController.js  ConsoleManager.js  DOMDebuggerManager.js  DOMManager.js  DatabaseManager.js  DebuggerManager.js  HeapManager.js  JavaScriptLogViewController.js  JavaScriptRuntimeCompletionProvider.js  LayerTreeManager.js  NetworkManager.js  RuntimeManager.js  TargetManager.js  TimelineManager.js  WebInspectorExtensionController.js  WorkerManager.js
lib/ultralight/inspector/Models/: Animation.js  AuditTestBase.js  AuditTestCase.js  BackForwardEntry.js  CPUInstrument.js  CSSCompletions.js  CSSKeywordCompletions.js  CSSRule.js  CSSStyleDeclaration.js  CallFrame.js  Canvas.js  Color.js  ConsoleMessage.js  Cookie.js  DOMNode.js  DOMNodeStyles.js  DatabaseObject.js  DebuggerData.js  FontStyles.js  Geometry.js  HeapAllocationsInstrument.js  HeapAllocationsTimelineRecord.js  Instrument.js  IssueMessage.js  LocalResource.js  LocalResourceOverride.js  MediaInstrument.js  NativeFunctionParameters.js  PropertyPath.js  Recording.js  RecordingAction.js  RecordingState.js  Resource.js  ResourceQueryResult.js  ScreenshotsInstrument.js  Script.js  ScriptInstrument.js  ScriptSyntaxTree.js  ScriptTimelineRecord.js  ShaderProgram.js  (+6 more)
lib/ultralight/inspector/Protocol/: AnimationObserver.js  ApplicationCacheObserver.js  CanvasObserver.js  Connection.js  ConsoleObserver.js  DOMObserver.js  DatabaseObserver.js  HeapObserver.js  InspectorBackendCommands.js  InspectorFrontendAPI.js  InspectorObserver.js  LoggingProtocolTracer.js  RemoteObject.js  ScriptProfilerObserver.js  Target.js  TimelineObserver.js
lib/ultralight/inspector/Protocol/Legacy/iOS/12.0/: InspectorBackendCommands.js
lib/ultralight/inspector/Protocol/Legacy/iOS/12.2/: InspectorBackendCommands.js
lib/ultralight/inspector/Protocol/Legacy/iOS/13.0/: InspectorBackendCommands.js
lib/ultralight/inspector/Proxies/: HeapSnapshotWorkerProxy.js
lib/ultralight/inspector/Test/: FrontendTestHarness.js  Test.js
lib/ultralight/inspector/Views/: AnimationContentView.js  AnimationDetailsSidebarPanel.js  ApplicationCacheDetailsSidebarPanel.js  ApplicationCacheFrameContentView.js  AuditTestCaseContentView.css  AuditTestContentView.css  AuditTestGroupContentView.css  AuditTreeElement.css  BezierEditor.css  BezierEditor.js  BlackboxSettingsView.css  BoxModelDetailsSectionRow.css  BreakpointActionView.css  ButtonNavigationItem.css  CPUTimelineView.css  CPUTimelineView.js  CPUUsageCombinedView.css  CallFrameTreeElement.css  CanvasContentView.css  CanvasContentView.js  CanvasOverviewContentView.css  CanvasOverviewContentView.js  CanvasSidebarPanel.css  CanvasSidebarPanel.js  CanvasTreeElement.js  ClusterContentView.js  CodeMirrorEditor.js  CodeMirrorTextMarkers.js  ColorPicker.css  ColorPicker.js  CompletionSuggestionsView.js  ComputedStyleDetailsPanel.css  ConsoleDrawer.css  ConsoleDrawer.js  ConsoleMessageView.css  ConsoleMessageView.js  ConsoleSnippetTreeElement.js  ContentBrowserTabContentView.js  ContentView.js  ContextMenu.js  (+150 more)
lib/ultralight/inspector/Workers/Formatter/: CSSFormatter.js  ESTreeWalker.js  FormatterContentBuilder.js  HTMLTreeBuilderFormatter.js  JSFormatter.js
lib/ultralight/inspector/Workers/HeapSnapshot/: HeapSnapshotWorker.js
lib/ultralight/lib/: AppCore.lib  Ultralight.lib  UltralightCore.lib
src/: PCH.h  PrismaUI_API.h  main.cpp
src/API/: API.cpp  API.h
src/Menus/CursorMenu/: CursorMenu.cpp
src/PrismaUI/: Communication.cpp  Core.cpp  Core.h  InputHandler.cpp  InputHandler.h  Inspector.cpp  Inspector.h  Listeners.cpp  Listeners.h  ViewManager.cpp  ViewManager.h  ViewRenderer.cpp
src/Utils/: DllLoader.h  SingleThreadExecutor.h
(+9 files in other folders)
